--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>this is a title</h1>
     <h1>this is a title</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel quos est odit aliquid rerum asperiores dolores praesentium inventore totam aspernatur et vero ratione in ad, ipsa voluptatem quod necessitatibus ducimus.</p>
     
 </body>
 </html>
